# buildbot

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  buildbot.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240303_082731_initial.rs  main.rs
migrations/2024-03-02-102329_initial/: down.sql  up.sql
src/: main.rs  schema.rs  web.rs
src/config/: inject_config.rs  mod.rs
src/domain/: generator.rs  mod.rs  project.rs  project_manager.rs
src/domain/entity/: account.rs  mod.rs  prelude.rs  project.rs
src/infra/: db.rs  db_client.rs  db_project.rs  mod.rs
src/kernel/: meta.rs  mod.rs  settings.rs
src/repository/: memory.rs  mod.rs
src/rest/: auth.rs  auth_rest.rs  context.rs  main_rest.rs  mod.rs  project.rs
src/util/: build_util.rs  meta.rs  mod.rs  rest.rs
