[package]
name = "buildbot"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
more-di = { version = "3.1.0", features = ["builder", "inject", "async"]}
log = { version = "0.4.20", features = [] }
log4rs = "1.3.0"

axum = "0.7.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
diesel = { version = "2.1.4", features = ["sqlite"] }
derivative = "2.2.0"

# cargo install diesel_cli --no-default-features --features postgres,sqlite
# brew install libpq
# brew install mysql-client
# diesel setup
# diesel migration generate initial
# diesel migration run
# diesel migration redo
# diesel migration revert
# diesel migration generate --diff-schema initial
