[package]
name = "buildbot"
version = "1.0.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
lazy_static = "1.4.0"
async_once = "0.2.6"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
more-di = { version = "3.1.0", features = ["builder", "inject", "async"]}
log = { version = "0.4.20", features = [] }
log4rs = "1.3.0"
anyhow = "1.0.79"
chrono = "0.4.34"
derivative = "2.2.0"

axum = "0.7.4"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
idgenerator-thin = "0.2.0"


